# qq-group-chatter

./: .env.example  .gitignore  AGENTS.md  README.md  bot.py  pyproject.toml
qq_group_chatter/: __init__.py  app.py  llm_tracing.py  logging_config.py  mem0_payload_migration.py  memory_dashboard.py  models.py  observability.py  orchestrator.py  prompt_loader.py  time_utils.py
qq_group_chatter/agent/: chat_agent.py  deepseek_llm.py  identity.py
qq_group_chatter/plugins/: __init__.py  chat.py
qq_group_chatter/prompts/: bot_identity.txt  chat_agent.txt  chat_agent_system.txt  chat_context_rules.txt  chat_search_grounded.txt  chat_search_grounded_system.txt  deepseek_system.txt  long_term_memory_extractor.txt  long_term_memory_planner.txt  long_term_memory_planner_system.txt  long_term_memory_section.txt  memory_error_notice.txt  search_answer.txt
qq_group_chatter/services/: conversation_archive.py  long_term_memory.py  long_term_memory_extractor.py  long_term_memory_planner.py  short_term_memory.py  web_search.py
scripts/: pytest_parallel.py
tests/: test_app.py  test_chat_agent.py  test_chat_flow.py  test_conversation_archive.py  test_deepseek_llm.py  test_identity.py  test_llm_tracing.py  test_logging_config.py  test_long_term_memory.py  test_long_term_memory_planner.py  test_long_term_memory_planner_trace.py  test_mem0_client.py  test_mem0_payload_migration.py  test_memory_dashboard.py  test_models.py  test_observability.py  test_plugin_chat.py  test_pytest_config.py  test_short_term_memory.py  test_time_utils.py  test_web_search.py
